--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,8 +25,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: msonlineservicesgreenwich@gmail.com
-    password: grtzviytxfcodvuw
+    username: msonlinegreenwichservices@gmail.com
+    password: wxwismhddvrrfndt
     properties:
       mail:
         smtp:
